[gd_scene load_steps=2 format=3 uid="uid://xjnkkmllvrh5"]

[ext_resource type="Script" path="res://Scripts/order.gd" id="1_cgbaf"]

[node name="Order" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_cgbaf")

[node name="Plate items" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 34.0
offset_bottom = 34.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect1" type="TextureRect" parent="Plate items"]
layout_mode = 0
offset_right = 35.0
offset_bottom = 34.0
expand_mode = 1
stretch_mode = 4

[node name="TextureRect2" type="TextureRect" parent="Plate items"]
layout_mode = 0
offset_left = 35.0
offset_right = 70.0
offset_bottom = 34.0
expand_mode = 1
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="Plate items"]
layout_mode = 0
offset_left = 70.0
offset_right = 105.0
offset_bottom = 34.0
expand_mode = 1
stretch_mode = 4

[node name="TextureRect4" type="TextureRect" parent="Plate items"]
layout_mode = 0
offset_left = 105.0
offset_right = 140.0
offset_bottom = 34.0
expand_mode = 1
stretch_mode = 4

[node name="TextureRect5" type="TextureRect" parent="Plate items"]
layout_mode = 0
offset_left = 140.0
offset_right = 175.0
offset_bottom = 34.0
expand_mode = 1
stretch_mode = 4

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_right = 164.0
offset_bottom = 26.0
text = "Burger name"
